--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,22 +74,24 @@
             </div>
           </div>
         </div>
+
+        <!-- LOGIN CARD -->
         <div class="col-lg-4">
-          <div class="card bg-primary text-center card-form">
-            <form></form>
+          <div class="card bg-dark text-center card-form">
             <div class="card-body">
               <h3>
                 Sign Up Today
               </h3>
               <p>Please fill the form to register</p>
               <form>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <input
                     type="text"
+                    formControlName="username"
                     class="form-control form-control-lg"
                     placeholder="Username"
                   />
-                </div>
+                </div> -->
                 <div class="form-group">
                   <input
                     type="email"
@@ -104,19 +106,132 @@
                     placeholder="Password"
                   />
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <input
                     type="password"
+                    formControlName="confirmpassword"
                     class="form-control form-control-lg"
                     placeholder="Confirm password"
                   />
+                </div> -->
+                <div class="form-group">
+                  <button
+                    class="btn btn-block btn-outline-light"
+                    type="submit"
+                    [disabled]="isLoading"
+                  >
+                    Login
+                  </button>
                 </div>
-                <input
-                  type="submit"
-                  value="submit"
-                  class="btn btn-outline-light btn-block"
-                />
+                <div class="form-group">
+                  <p>Not Registered?</p>
+                  <button
+                    class="btn btn-primary"
+                    data-toggle="modal"
+                    data-target="#registerModal"
+                  >
+                    Register
+                  </button>
+                </div>
               </form>
+            </div>
+          </div>
+        </div>
+
+        <!-- REGISTER MODAL -->
+
+        <div class="modal fade text-dark" id="registerModal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header bg-dark">
+                <h5 class="modal-title text-light">Register</h5>
+                <button class="close text-light" data-dismiss="modal">
+                  <span>&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form
+                  [formGroup]="registerform"
+                  (ngSubmit)="onRegister(registerform)"
+                >
+                  <!-- <div class="form-group">
+                    <label for="username">Username</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      required
+                      formControlName="username"
+                    />
+                  </div> -->
+                  <div class="form-group">
+                    <label>Email</label>
+                    <input
+                      type="text"
+                      formControlName="email"
+                      class="form-control"
+                      [ngClass]="{
+                        'is-invalid': submitted && registerControl.email.errors
+                      }"
+                      placeholder="email"
+                    />
+                    <div
+                      *ngIf="submitted && !!registerControl.email.errors"
+                      class="invalid-feedback"
+                    >
+                      <div *ngIf="!!registerControl.email.errors.required">
+                        Email is required
+                      </div>
+                      <div *ngIf="!!registerControl.email.errors.email">
+                        Email must be a valid email address
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Password</label>
+                    <input
+                      type="password"
+                      formControlName="password"
+                      class="form-control"
+                      [ngClass]="{
+                        'is-invalid':
+                          submitted && registerControl.password.errors
+                      }"
+                      placeholder="password"
+                    />
+                    <div
+                      *ngIf="submitted && registerControl.password.errors"
+                      class="invalid-feedback"
+                    >
+                      <div *ngIf="registerControl.password.errors.required">
+                        Password is required
+                      </div>
+                      <div *ngIf="registerControl.password.errors.minlength">
+                        Password must be at least 6 characters
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <div class="form-group">
+                    <label for="password">Confirm Password</label>
+                    <input
+                      type="password"
+                      class="form-control"
+                      required
+                      formControlName="password"
+                    />
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-primary">
+                      Submit
+                    </button>
+                    <button class="btn btn-outline-dark" data-dismiss="modal">
+                      Cancel
+                    </button>
+                  </div>
+                  <div class="alert alert-danger p-2 text-center" *ngIf="error">
+                    <p>{{ error }}</p>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -148,11 +263,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img
-          src="../../img/explore-section1.jpg"
+        <!-- <img
+          src="../../img/home.jpg"
           alt=""
           class="img-fluid mb-3 rounded-circle"
-        />
+        /> -->
       </div>
       <div class="col-md-6">
         <h3>Explore & Connect</h3>
@@ -204,11 +319,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 order-2">
-        <img
+        <!-- <img
           src="img/create-section1.jpg"
           alt=""
           class="img-fluid mb-3 rounded-circle"
-        />
+        /> -->
       </div>
       <div class="col-md-6 order-1">
         <h3>Create Your Passion</h3>
@@ -263,11 +378,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img
+        <!-- <img
           src="img/share-section1.jpg"
           alt=""
           class="img-fluid mb-3 rounded-circle"
-        />
+        /> -->
       </div>
       <div class="col-md-6">
         <h3>Share What You Create</h3>
@@ -301,14 +416,16 @@
 </section>
 
 <!-- FOOTER -->
-<footer id="main-footer" class="bg-dark">
+<footer id="main-footer" class="bg-dark fixed-bottom footer">
   <div class="container">
     <div class="row">
-      <div class="col text-center py-4">
-        <h3>LOOPLAB</h3>
-        <P>Copyright &copy; <span id="year"></span></P>
+      <div class="col text-center py-2 d-inline">
+        <!-- <h3>LOOPLAB</h3> -->
+        <P class="d-inline float-left"
+          >Copyright &copy; 2019<span id="year"></span
+        ></P>
         <button
-          class="btn btn-primary"
+          class="btn btn-primary d-inline float-right"
           data-toggle="modal"
           data-target="#contactModal"
         >
@@ -318,6 +435,7 @@
     </div>
   </div>
 </footer>
+
 <!-- CONTACT MODAL -->
 <div class="modal fade text-dark" id="contactModal">
   <div class="modal-dialog">
